--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  name: MyString
   details: MyText
-  completed: 
+  completed: false
 
 two:
-  title: MyString
+  name: MyString
   details: MyText
-  completed: 
+  completed: false
